[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Textures/UI/MIssionFrame.png" type="Texture" id=1]
[ext_resource path="res://Resources/Fonts/public-pixel-font/PublicPixel-eZPz6.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/UI/ChallengePanel.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[node name="ChallengePanel" type="Node2D"]
script = ExtResource( 3 )

[node name="MIssionFrame" type="Sprite" parent="."]
position = Vector2( 152, 82 )
scale = Vector2( 15, 2.8 )
texture = ExtResource( 1 )

[node name="IncreaseButton" type="Button" parent="."]
margin_left = 228.0
margin_top = 30.0
margin_right = 290.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = ">"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecreaseButton" type="Button" parent="."]
margin_left = 9.99998
margin_top = 33.0
margin_right = 72.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 1 )
text = "<"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 2.0
margin_top = 13.0
margin_right = 152.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )
text = "Title
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreMult" type="Label" parent="."]
margin_left = 315.0
margin_top = 56.0
margin_right = 465.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
text = "X 1.0
"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="."]
margin_left = 73.0
margin_top = 59.0
margin_right = 223.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 3 )
text = "0.0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="IncreaseButton" to="." method="_on_IncreaseButton_pressed"]
[connection signal="pressed" from="DecreaseButton" to="." method="_on_DecreaseButton_pressed"]
